--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "helmet": "^4.1.0",
     "http-errors": "^1.8.0",
+    "mongoose": "^5.10.0",
     "morgan": "^1.10.0"
   }
 }
