--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "helmet": "^4.1.0",
     "http-errors": "^1.8.0",
     "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0"
   }
